# EndfieldsDB

./: .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  PROJECT_INDEX.md  README.md  THREADING.md
.github/workflows/: ci.yml
bench/: endfields_bench.c
src/: ef_atomic_unaligned.h  ef_config.h  ef_crc.c  ef_crc.h  ef_crc_internal.h  ef_crc_pclmul.c  ef_index.c  ef_index.h  ef_port.c  ef_port.h  ef_sb_layout.c  ef_sb_layout.h  endfields.c  endfields.h  main.c  main_embedded.c
tests/: test_common.c  test_common.h  test_core.c  test_errors.c  test_index_queue.c
